fix: title of the container aligned to the center vertically

--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,25 @@ li {
 }
 
 /*--------------------
+        TYPOGRAPHY
+----------------------*/
+
+h4 {
+    font-size: 16px;
+}
+
+small {
+    font-size: 12px;
+}
+
+/*--------------------
         LAYOUT
 ----------------------*/
 
 main {
-    height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    overflow-y: auto;
 }
 
 .container {
@@ -48,6 +60,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 .row ul  {
@@ -59,6 +72,14 @@ main {
 .row ul li {
     width: calc(100% / 3);
 }
+
+.title-container {
+    height: 60px;
+}
+
+/*--------------------
+        GRID
+----------------------*/
 
 .card-container {
     margin: 10px;
@@ -74,4 +95,18 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .row ul li {
+        width: calc(100% / 2 );
+    }
+    
+}
+
+@media screen and (max-width: 425px) {
+    .row ul li {
+        width: 100%;
+    }
+    
 }
